# tchap-landing-page-v2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  ONBOARDING.md  README.md  apps.py  docker-compose.yml  justfile  package-lock.json  publiccode.yml  pyproject.toml  scalingo.json
.github/workflows/: cd-docker.yml  ci-check-i18n.yml  docs.yml  publiccodeyml-check.yml  publish.yml
config/: settings.py  settings_test.py  urls.py
content_manager/: models.py
content_manager/blocks/: basics.py  layout.py
core/: models.py
dashboard/: views.py  wagtail_hooks.py
db_storage/: storage.py  urls.py  views.py
demo/: README.md  justfile  manage.py  pyproject.toml
demo/annuaire/: api.py  apps.py  blocks.py  models.py
demo/annuaire/management/commands/: seed_annuaire.py
demo/annuaire/migrations/: 0001_initial.py
demo/annuaire/templates/annuaire/: annuaire_page.html
demo/annuaire/templates/annuaire/blocks/: liste_psychologues.html
demo/demo/: urls.py  wsgi.py
demo/demo/settings/: base.py  dev.py  production.py
demo/demo/templates/: 404.html
demo/home/: tests.py
demo/home/templates/home/: home_page.html
demo/search/templates/search/: search.html
docs/: .gitignore  README.md  changelog.md  conf.py  db-storage.md  index.md  requirements.txt
forms/: models.py
menus/: apps.py  blocks.py
proconnect/: wagtail_hooks.py
scripts/: descend_prod_medias.sh  restore_local_medias.sh  restore_prod_db.sh  restore_prod_medias.sh
sites_conformes/: _version.py
tchap/: script_body.html  script_head.html
(+191 files in other folders)
