[project]
name = "demo"
version = "0.1.0"
description = "Demo Wagtail site using sites-conformes"
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "sites-conformes>=3.2.0rc1",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0",
]

# TODO: remove [tool.uv.sources] once sites-conformes >= 3.2.0rc1 is on PyPI.
# Until then, this points `uv lock` / `uv sync` at the editable checkout in
# the sibling sites_conformes/ directory so the demo can run against the
# packagified layout we're preparing in this repo.
[tool.uv.sources]
sites-conformes = { path = "../", editable = true }
